<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="112dp">

  <ImageView
    android:id="@+id/accountCellIcon"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:src="@drawable/account_default"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/accountCellTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:ellipsize="end"
    android:maxLines="1"
    android:text="@string/settingsPlaceholder"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/accountCellIcon"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/accountCellSubtitle"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:ellipsize="end"
    android:maxLines="2"
    android:text="@string/settingsPlaceholder"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/accountCellIcon"
    app:layout_constraintTop_toBottomOf="@id/accountCellTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
