...
  <string name="settingsCommit">Commit</string>
  <string name="settingsBuildSummary" />
  <string name="settingsCancel">Cancel</string>
  <string name="settingsCardCreatorLabel">Don\'t have a library card?</string>
  <string name="settingsCardCreatorSignUp">Sign up</string>
  <string name="settingsCOPPADeleteBooks">Delete books?</string>
  <string name="settingsCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="settingsCOPPAOver13">I am over 13</string>
  <string name="settingsCustomOPDS">Custom OPDS Feed</string>
  <string name="settingsCustomOPDSCreate">Create</string>
  <string name="settingsCustomOPDSInvalidURI">Not a valid URI.</string>
  <string name="settingsCustomOPDSURL">Custom feed URL…</string>
  <string name="settingsDebug">Debug options</string>
  <string name="settingsDebugSummary" />
  <string name="settingsDelete">Delete</string>
  <string name="settingsDetails">Details</string>
  <string name="settingsDocumentation">Documentation</string>
  <string name="settingsEULA">User agreement</string>
  <string name="settingsEULAStatement">I agree to the terms of the End User License Agreement.</string>
  <string name="settingsEULASummary" />
  <string name="settingsFaq">FAQ</string>
...
